A user reported that the /__processes__ endpoint occasionally hangs.
Stack traces provided by Alex R revealed that all the threads appeared to be idle waiting for events. After investigating the code, the issue was found to be possible when a process gets terminated after the /__processes__ route handler dispatches to it, thus dropping the dispatch and abandoning the future.