Fixed an issue where /__processes__ never returns a response.

It's possible for /__processes__ to never return a response if
a process is terminated after the /__processes__ handler dispatches
to it, thus leading the Future to be abandoned.

This patch ensures we ignore those cases, rather than wait forever.

See MESOS-9766.

Review: https://reviews.apache.org/r/70594